--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@stimetable/map-renderer": "0.0.10",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "stimetable.css": "0.0.7",
