--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@stimetable/map-renderer": "0.0.10",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
     "register-service-worker": "^1.7.1",
     "stimetable.css": "0.0.7",
     "vue": "^3.0.0",
