--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@stimetable/map-renderer": "0.0.10",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
+    "js-sql-parser": "^1.4.1",
     "register-service-worker": "^1.7.1",
     "stimetable.css": "0.0.7",
     "vue": "^3.0.0",
